[tool.poetry]
name = "password"
version = "0.1.0"
description = ""
authors = ["Gus Garcia"]

[tool.poetry.dependencies]
python = "^3.8"
astroid = "2.4.2"
atomicwrites = "1.4.0"
attrs = "20.2.0"
colorama = "0.4.3"
iniconfig = "1.0.1"
isort = "5.6.2"
lazy-object-proxy = "1.4.3"
mccabe = "0.6.1"
packaging = "20.4"
pluggy = "0.13.1"
py = "1.9.0"
pylint = "2.6.0"
pyparsing = "2.4.7"
pytest = "6.1.1"
rope = "0.18.0"
six = "1.15.0"
toml = "0.10.1"
wrapt = "1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
